# agentic-research

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml
examples/: __init__.py  basic_research.py  multi_provider.py  with_memory.py
src/: __init__.py  cli.py  config.py  main.py
src/agents/: __init__.py  planning.py  rag.py  report.py  research.py  task_manager.py
src/core/: __init__.py  planner.py  report_generator.py  researcher.py
src/llm/: __init__.py  router.py
src/memory/: __init__.py  manager.py  short_term.py  working.py
src/rag/: __init__.py  embeddings.py  retriever.py  vectorstore.py
src/tools/: __init__.py  content_fetch.py  document.py  web_search.py
src/workflows/: __init__.py  research_flow.py  states.py
tests/: __init__.py  test_memory.py  test_tools.py
