[project]
name = "deep-research"
version = "0.1.0"
description = "An AI-powered deep research system using LangChain and LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.10",
    "langchain-openai>=1.1.9",
    "langchain-anthropic>=1.3.3",
    "langgraph>=1.0.8",
    "tavily-python>=0.7.21",
    "python-dotenv>=1.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "tiktoken>=0.8.0",
    "beautifulsoup4>=4.14.3",
    "rich>=14.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
